# notification_bot_backend

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
api/: models.py
app/: __init__.py
app/backend/: __init__.py  backend.py  deed_processor.py  requester.py  response.py
app/builder/: __init__.py  backend_builder.py
app/common/: constants.py
app/db/: deed.py
configs/: config.yaml  definitions.py
lib/: __init__.py  backend.py
lib/builder/: __init__.py  backend_builder.py
lib/common/: constants.py
lib/db/: deed.py
routers/: __init__.py  deed.py  user.py
